--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -80,13 +80,81 @@ img {
 }
 
 /*=============== HEADER & NAV ===============*/
+.header{
+  position: fixed;
+  width: 100%;
+  top: 0; 
+  left: 0;
+  background-color: transparent;
+  z-index: var(--z-fixed);
+  transition: background-color .4s, box-shadow .4s;
+}
 
+.nav{
+  position: relative;
+  height: var(--header-height);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
+.nav__logo {
+  display: inline-flex;
+  align-items: center;
+  column-gap: .5rem;
+  font-family: var(--second-font);
+  color: var(--black-color);
+}
+
+.nav__logo i{
+  font-size: 1.5rem;
+}
+
+.nav__logo span{
+  font-weight: var(--font-bold);
+}
+
+.nav__toggle,
+.nav__close{
+  display: flex;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
 /* Navigation for mobile devices */
+@media screen and (max-width: 1150px) {
+ .nav__menu{
+   position: fixed;
+   top: -120%;
+   left: 0;
+   background-color: var(--body-color);
+   box-shadow: 0 4px 24px hsla(40, 24%, 4%, 0.1);
+   width: 100%;
+   padding-block: 5rem 4.5rem;
+   transition: top .4s;
+ }  
+}
 
+.nav__list{
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  row-gap: 2.5rem;
+}
+
+.nav__link{
+  color: var(--black-color);
+}
+
+.nav__close{
+  position: absolute;
+  top: 1rem;
+  right: 1.5rem;
+}
 
 /* Show menu */
-
+.show-menu{
+  top: 0;
+}
 
 /* Add shadow header */
 
