--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -160,10 +160,129 @@ img {
 
 
 /*=============== HOME ===============*/
+.home{
+  position: relative;
+}
+
+.home__container{
+  padding-top: 9.5rem;
+  height: 100vh;
+}
+
+.home__data{
+  position: relative;
+  z-index:  var(--z-tooltip);
+}
+
+.home__subtitle{
+  font-size: var(--big-font-size);
+  font-family: var(--second-font);
+  margin-bottom: .5rem;
+}
+
+.home__title{
+  font-size: var(--biggest-font-size);
+  font-family: var(--second-font);
+  line-height: 100%;
+  margin-bottom: 1rem;
+}
+
+.home__title span{
+  font-size: var(--bigger-font-size);
+}
+
+.home__button{
+  position: relative;
+  display: inline-flex;
+   background-color: var(--body-color);
+   border: 3px solid var(--black-color);
+   padding: 0.75rem 0.2rem;
+   border-radius: 4rem;
+   color: var(--black-color);
+}
+
+.home__button::after{
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: var(--body-color);
+  border: 3px solid var(--black-color);
+  left: 0;
+  right: 0;
+  bottom: -8px;
+  border-radius: 4rem;
+  justify-self: center;
+  transform: transform .4s;
+  z-index: -1;
+}
+
+.home__button::after:hover{
+  transform: translate(2px, 2px);
+}
+
+.home__cloud-1,
+.home__cloud-2{
+  position: absolute;
+  width: 150px;
+}
+
+.home__cloud-1{
+  top: 6rem;
+  right: 1rem;
+  animation: cloud-1 8s linear infinite;
+}
+
+.home__cloud-2{
+  top: 25rem;
+  left: 0.5rem;
+  animation: cloud-2 8s linear infinite;
+}
+
+.home__images{
+  overflow: hidden;
+}
+
+.home__images div{
+  max-width: initial;
+  width: 650px;
+  height: 270px;
+  background-size: 1000px 100%;
+  position: absolute;
+  left: 0;
+}
+
+.home__waves-1{
+  bottom: -1.5rem;
+}
+.home__waves-2{
+  bottom: -1rem;
+}
+.home__waves-3{
+  bottom: 3rem;
+}
+
+.home__ship{
+  width: 300px;
+  position: absolute;
+  bottom: 2rem;
+  left: 0;right: 0;
+  margin-inline: auto;
+  transform-origin: center center;
+}
+
 
 
 /* Animated Clouds */
+@keyframes cloud-1{
+  0% { margin-right: -1000px; }
+  100% {margin-right:  100% ; }
+}
 
+@keyframes cloud-2{
+  0% { margin-left: 1000%; }
+  100% {margin-left:  1000px ; }
+}
 
 /* Animated waves */
 
